peac_dev/force-app/main/default/objects/ORE__c/ORE__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings to Bypass Org Rules</description>
    <label>OrgExceptions</label>
</CustomObject>