peac_dev/force-app/main/default/objects/ORE__c/fields/GDS_Validation_Bypass__c.field-meta.xml
<CustomField>
    <fullName>GDS_Validation_Bypass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GDS Validation Bypass</label>
    <type>Checkbox</type>
</CustomField>