peac_dev/force-app/main/default/objects/ORE__c/fields/StageBypass__c.field-meta.xml
<CustomField>
    <fullName>StageBypass__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Bypass Opportunity Stage</description>
    <label>StageBypass</label>
    <type>Checkbox</type>
</CustomField>