peac_dev/force-app/main/default/objects/ORE__c/fields/Tolerance__c.field-meta.xml
<CustomField>
    <fullName>Tolerance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tolerance</label>
    <type>Checkbox</type>
</CustomField>