peac_dev/force-app/main/default/objects/ORE__c/listViews/All_with_Last_Modified.listView-meta.xml
<ListView>
    <fullName>All_with_Last_Modified</fullName>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>SETUP_TYPE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>NAME</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All with Last Modified</label>
    <sharedTo>
        <role>System_Admin</role>
    </sharedTo>
</ListView>