peac_dev/force-app/main/default/objects/ORE__c/listViews/Bypass_FIelds.listView-meta.xml
<ListView>
    <fullName>Bypass_FIelds</fullName>
    <columns>SETUP_OWNER_NAME</columns>
    <columns>SETUP_TYPE</columns>
    <columns>NAME</columns>
    <columns>Bypass__c</columns>
    <columns>GDS_Validation_Bypass__c</columns>
    <columns>StageBypass__c</columns>
    <filterScope>Everything</filterScope>
    <label>Bypass FIelds</label>
</ListView>